--- a/src/App.less
+++ b/src/App.less
@@ -16,7 +16,10 @@ body{
     // width:90%;
     // margin:0 auto;
 }
-
+#AppSelect{
+    text-align: center;
+    margin: 2rem;
+}
 #GoodsDataContent{
     display: flex;
     justify-content:flex-start;
