--- a/src/App.css
+++ b/src/App.css
@@ -18,8 +18,9 @@ body {
   margin: 2rem;
 }
 #GoodsDataContent {
+  text-align: center;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   flex-wrap: wrap;
   margin: 0 auto;
   background-color: white;
