--- a/src/GoodBox.less
+++ b/src/GoodBox.less
@@ -24,6 +24,7 @@
 .GoodBoxText{
     text-align: center;
     height: 2rem;
+    width:30%;
 }
 .GoodBoxSellNormal{
     border-radius: @borderRadius;
